micromobility_car_navigation/local/Project/dev_ws/log/build_2021-06-03_16-08-12/pathfinding/stderr.log
  File "/home/user/Projects/dev_ws/install/pathfinding/lib/python3.8/site-packages/pathfinding/pathfinding_service.py", line 39
    for n in in self.graph:
             ^
SyntaxError: invalid syntax

